# fantasy-baseball-platform

./: .gitignore  AGENTS.md  README.md  prefect.yaml  requirements-dev.txt  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: automation-job.md  bug.md  dbt-mart.md  feature.md
.github/workflows/: ci.yml  dbt-source-freshness.yml  ingest-mpd-player-map.yml  post-issue-119-status.yml
app/: app.py
apps/draft-tool/: README.md  app.py
apps/in-season-tool/: README.md  app.py  lineup_optimizer.py
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/macros/: nfbc_parse_number.sql  source_freshness.sql
dbt/seeds/: faab_remaining.csv  ftn_nfbc_player_overrides.csv  league_config.csv  league_roster_slots.csv
docs/: security.md
docs/adr/: 0001-prefect-on-aws.md  README.md
docs/plans/: README.md  cross-league_faab_rec_derivation_266474f4.plan.md  fantasy_baseball_platform_roadmap_356f35c5.plan.md
flows/: .dockerignore  Dockerfile  README.md  fangraphs_ros.py  ftn_faab.py  hello_flow.py  nfbc_in_season.py  pyproject.toml  razzball_weekly.py
flows/fbb_flows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flows/templates/: fangraphs_ros_hitting_header.csv  fangraphs_ros_pitching_header.csv
scripts/: .issue_state.json  README.md  create_planning_issues.py  issues.py  verify_gh_issue_pat.py
scripts/comments/: issue-119-status.md
terraform/: README.md
tmp/: fake_aws_creds_probe.txt
utils/: UPLOAD_TO_S3.md  upload_folder_to_s3.py
(+131 files in other folders)
